force-app/main/default/objects/Opportunity/fields/Hosting_Location__c.field-meta.xml
<CustomField>
    <fullName>Hosting_Location__c</fullName>
    <label>Hosting Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US-Any</fullName>
            </value>
            <value>
                <fullName>US-East</fullName>
            </value>
            <value>
                <fullName>US-West</fullName>
            </value>
            <value>
                <fullName>Canada-Canada</fullName>
            </value>
            <value>
                <fullName>EU-Any</fullName>
            </value>
            <value>
                <fullName>EU-Frankfurt</fullName>
            </value>
            <value>
                <fullName>EU-London</fullName>
            </value>
            <value>
                <fullName>APJ-Any</fullName>
            </value>
            <value>
                <fullName>APJ-Sydney</fullName>
            </value>
            <value>
                <fullName>APJ-Singapore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>