force-app/main/default/objects/Opportunity/fields/Hosting_Type__c.field-meta.xml
<CustomField>
    <fullName>Hosting_Type__c</fullName>
    <inlineHelpText>Dedicated/ Shared/ On Premise/ SAAS ?</inlineHelpText>
    <label>Hosting Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dedicated</fullName>
            </value>
            <value>
                <fullName>On Premise</fullName>
            </value>
            <value>
                <fullName>SaaS</fullName>
            </value>
            <value>
                <fullName>Shared</fullName>
            </value>
            <value>
                <fullName>Dedicated Cloud (DC)</fullName>
                <isActive>false</isActive>
                <label>Dedicated Cloud (DC)</label>
            </value>
            <value>
                <fullName>Multi-Tenant Cloud (MC)</fullName>
                <isActive>false</isActive>
                <label>Multi-Tenant Cloud (MC)</label>
            </value>
            <value>
                <fullName>On-Premise (OP)</fullName>
                <isActive>false</isActive>
                <label>On-Premise (OP)</label>
            </value>
            <value>
                <fullName>Private Cloud (PC)</fullName>
                <isActive>false</isActive>
                <label>Private Cloud (PC)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>