force-app/main/default/objects/Opportunity/fields/Hosting_Type_from_Products__c.field-meta.xml
<CustomField>
    <fullName>Hosting_Type_from_Products__c</fullName>
    <formula>IF(Dedicated_Foundation_Items__c&gt;0, &quot;Dedicated&quot;, 
IF(SaaS_Foundation_Items__c &gt;0, &quot;SaaS&quot;,
IF(Self_Hosted_Foundation_Items__c &gt;0, &quot;Self-Hosted&quot;, &quot;None&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hosting Type from Products</label>
    <type>Text</type>
</CustomField>