force-app/main/default/objects/Opportunity/fields/Hours_Spent__c.field-meta.xml
<CustomField>
    <fullName>Hours_Spent__c</fullName>
    <description>For ES TEam use only</description>
    <inlineHelpText>ES Team use only</inlineHelpText>
    <label>Hours Spent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>