force-app/main/default/objects/Opportunity/fields/Hours_Spent_This_Week__c.field-meta.xml
<CustomField>
    <fullName>Hours_Spent_This_Week__c</fullName>
    <description>For ES Team use only</description>
    <inlineHelpText>For ES Team Use only</inlineHelpText>
    <label>Hours Spent This Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>