force-app/main/default/objects/Opportunity/fields/Identify_Pain__c.field-meta.xml
<CustomField>
    <fullName>Identify_Pain__c</fullName>
    <inlineHelpText>What are their Primary Business Objectives?</inlineHelpText>
    <label>Identify Pain:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>