force-app/main/default/objects/Opportunity/fields/Implementation_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Closed_Date__c</fullName>
    <label>Implementation Closed Date</label>
    <type>Date</type>
</CustomField>