force-app/main/default/objects/Opportunity/fields/Implementation_Complete__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Implementation Complete?</label>
    <type>Checkbox</type>
</CustomField>