force-app/main/default/objects/Opportunity/fields/Implementation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Implementation_End_Date__c</fullName>
    <label>Expected Implementation End Date</label>
    <type>Date</type>
</CustomField>