force-app/main/default/objects/Opportunity/fields/Implementation_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Implementation Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>