force-app/main/default/objects/Opportunity/fields/Implementation_Type__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Type__c</fullName>
    <inlineHelpText>Define the ES Resource Availability for implementation</inlineHelpText>
    <label>Implementation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Managed Resource</fullName>
            </value>
            <value>
                <fullName>Onsite</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>