force-app/main/default/objects/Opportunity/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <description>Invoice Number from accounting</description>
    <externalId>true</externalId>
    <inlineHelpText>Invoice Number from accounting</inlineHelpText>
    <label>Invoice Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>