force-app/main/default/objects/Opportunity/fields/Invoice_Origin__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Origin__c</fullName>
    <formula>If( BEGINS(Invoice_Number__c, &quot;ARFR&quot;), &quot;France&quot;,
If( BEGINS(Invoice_Number__c, &quot;AR&quot;), &quot;AutoRABIT&quot;,
If( BEGINS(Invoice_Number__c, &quot;CS&quot;) || BEGINS(Invoice_Number__c, &quot;I&quot;) || ISNUMBER(Invoice_Number__c) || BEGINS(UPPER(Invoice_Number__c), &quot;C&quot;), &quot;CodeScan&quot;,
If( ISBLANK(Invoice_Number__c), &quot;Not Invoiced&quot;, 
&quot;Unknown&quot;
)
)
)
)</formula>
    <label>Invoice Origin</label>
    <type>Text</type>
</CustomField>