force-app/main/default/objects/Opportunity/fields/Invoiced_From_AutoRABIT_QBO__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_From_AutoRABIT_QBO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoiced From AutoRABIT QBO</label>
    <type>Checkbox</type>
</CustomField>