force-app/main/default/objects/Opportunity/fields/Invoiced_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Time_Stamp__c</fullName>
    <description>Date/time that the Opp Stage was set to Invoiced</description>
    <label>Invoiced Time Stamp</label>
    <type>DateTime</type>
</CustomField>