force-app/main/default/objects/Opportunity/fields/Is_Current_Subs_equal_to_Renewal_Upsell__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_Subs_equal_to_Renewal_Upsell__c</fullName>
    <inlineHelpText>To understand if there is a change in the Subs on Renewal/ Upsell</inlineHelpText>
    <label>Is Current Subs equal to Renewal/ Upsell</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>