force-app/main/default/objects/Opportunity/fields/Is_eligibile_for_Premier_support__c.field-meta.xml
<CustomField>
    <fullName>Is_eligibile_for_Premier_support__c</fullName>
    <inlineHelpText>Enable if the Customer is eligible for Premier support.
If this is not enabled ,it means customer is availing standard support services.</inlineHelpText>
    <label>Is eligibile for Premier support</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>