force-app/main/default/objects/Opportunity/fields/Is_Introduction_done_by_ISV_Partner__c.field-meta.xml
<CustomField>
    <fullName>Is_Introduction_done_by_ISV_Partner__c</fullName>
    <label>Is Introduction done by ISV Partner?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>