force-app/main/default/objects/Opportunity/fields/Is_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Is_Renewal__c</fullName>
    <formula>INCLUDES(Opportunity_Type_New_Renewal_Upsell__c, &quot;Renewal&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Renewal</label>
    <type>Checkbox</type>
</CustomField>