force-app/main/default/objects/Opportunity/fields/Is_RoW__c.field-meta.xml
<CustomField>
    <fullName>Is_RoW__c</fullName>
    <formula>if( Billing_Country__c = &apos;United States&apos;, &quot;No&quot;, &quot;Yes&quot;)</formula>
    <label>Is RoW?</label>
    <type>Text</type>
</CustomField>