force-app/main/default/objects/Opportunity/fields/isFromOpportunity__c.field-meta.xml
<CustomField>
    <fullName>isFromOpportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will automatically enabled when lead successfully converted</description>
    <label>isFromOpportunity</label>
    <type>Checkbox</type>
</CustomField>