force-app/main/default/objects/Opportunity/fields/isRenewal__c.field-meta.xml
<CustomField>
    <fullName>isRenewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isRenewal</label>
    <type>Checkbox</type>
</CustomField>