force-app/main/default/objects/Opportunity/fields/isStageChanged__c.field-meta.xml
<CustomField>
    <fullName>isStageChanged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isStageChanged</label>
    <type>Checkbox</type>
</CustomField>