force-app/main/default/objects/Opportunity/fields/isUpsell__c.field-meta.xml
<CustomField>
    <fullName>isUpsell__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isUpsell</label>
    <type>Checkbox</type>
</CustomField>