force-app/main/default/objects/Opportunity/fields/IT_Implementation_Stage__c.field-meta.xml
<CustomField>
    <fullName>IT_Implementation_Stage__c</fullName>
    <label>IT/Implementation Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Customer_Onboarding__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Discovery Call</fullName>
            </value>
            <value>
                <fullName>Go-Live Prep</fullName>
            </value>
            <value>
                <fullName>Go-Live Support</fullName>
            </value>
            <value>
                <fullName>Implementation Closure</fullName>
            </value>
            <value>
                <fullName>Infrastructure Pre-requisite check</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Integrations with AR</fullName>
            </value>
            <value>
                <fullName>Production On-boarding</fullName>
            </value>
            <value>
                <fullName>Sanity Checks</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>