force-app/main/default/objects/Opportunity/fields/License_ARR__c.field-meta.xml
<CustomField>
    <fullName>License_ARR__c</fullName>
    <formula>Opportunity_ARR_Amount__c - Service_ARR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>