force-app/main/default/objects/Opportunity/fields/Logged_in_User__c.field-meta.xml
<CustomField>
    <fullName>Logged_in_User__c</fullName>
    <formula>IF(OR( OwnerId == $User.Id ,  $User.FirstName ==&apos;Sidharth&apos;,$User.FirstName==&apos;Vishnu&apos;,$User.LastName==&apos;Marketing&apos;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged in User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>