force-app/main/default/objects/Opportunity/fields/Metrics__c.field-meta.xml
<CustomField>
    <fullName>Metrics__c</fullName>
    <inlineHelpText>What is the economic impact of the solution?</inlineHelpText>
    <label>Metrics:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>