force-app/main/default/objects/Opportunity/fields/New__c.field-meta.xml
<CustomField>
    <fullName>New__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New?</label>
    <type>Checkbox</type>
</CustomField>