force-app/main/default/objects/Opportunity/fields/New_No_of_subs__c.field-meta.xml
<CustomField>
    <fullName>New_No_of_subs__c</fullName>
    <label>New_No_of_subs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>