force-app/main/default/objects/Opportunity/fields/New_Oppty_Count__c.field-meta.xml
<CustomField>
    <fullName>New_Oppty_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Oppty Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>