force-app/main/default/objects/Opportunity/fields/NewLogo_ARR_Amount__c.field-meta.xml
<CustomField>
    <fullName>NewLogo_ARR_Amount__c</fullName>
    <description>We are using this field to forecast opportunity ARR amount for newlogo opportunities.</description>
    <inlineHelpText>ARR Opportunity amount for New Logo Opportunities.</inlineHelpText>
    <label>NewLogo ARR Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>