force-app/main/default/objects/Opportunity/fields/Next_Step_Tech_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Tech_Date__c</fullName>
    <label>Next Step (Tech) Date</label>
    <type>Date</type>
</CustomField>