force-app/main/default/objects/Opportunity/fields/Next_Week_Action_Items__c.field-meta.xml
<CustomField>
    <fullName>Next_Week_Action_Items__c</fullName>
    <inlineHelpText>Mention the tasks planned for next week</inlineHelpText>
    <label>Next Week Action Items</label>
    <length>255</length>
    <type>Text</type>
</CustomField>