force-app/main/default/objects/Opportunity/fields/No_of_Hours_Service__c.field-meta.xml
<CustomField>
    <fullName>No_of_Hours_Service__c</fullName>
    <label>No of Hours (Service)</label>
    <summarizedField>OpportunityLineItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.ProductFamily__c</field>
        <operation>contains</operation>
        <value>Professional Services</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>