force-app/main/default/objects/Opportunity/fields/No_of_Product_Subs_Vault__c.field-meta.xml
<CustomField>
    <fullName>No_of_Product_Subs_Vault__c</fullName>
    <label>No. of Product Subs (Vault)</label>
    <summarizedField>OpportunityLineItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.ProductFamily__c</field>
        <operation>equals</operation>
        <value>Vault</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>