force-app/main/default/objects/Opportunity/fields/No_of_Recurring_Products__c.field-meta.xml
<CustomField>
    <fullName>No_of_Recurring_Products__c</fullName>
    <inlineHelpText>Count of Recurring Revenue products.</inlineHelpText>
    <label>No. of Recurring Products</label>
    <summarizedField>OpportunityLineItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Recurring_Revenue__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>