force-app/main/default/objects/Opportunity/fields/Number_of_Product_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Product_Subscriptions__c</fullName>
    <inlineHelpText>ARM Product</inlineHelpText>
    <label>No. of Product Subs (ARM)</label>
    <summarizedField>OpportunityLineItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.ProductFamily__c</field>
        <operation>equals</operation>
        <value>ARM, DevSecOps</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>