force-app/main/default/objects/Opportunity/fields/of_days_in_Negotiation__c.field-meta.xml
<CustomField>
    <fullName>of_days_in_Negotiation__c</fullName>
    <description># of days in Negotiation</description>
    <label># of days in Negotiation</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>