force-app/main/default/objects/Opportunity/fields/of_days_in_Proposal__c.field-meta.xml
<CustomField>
    <fullName>of_days_in_Proposal__c</fullName>
    <label># of days in Proposal</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>