force-app/main/default/objects/Opportunity/fields/of_days_in_Trail_Completed__c.field-meta.xml
<CustomField>
    <fullName>of_days_in_Trail_Completed__c</fullName>
    <description># of days in Trail Completed</description>
    <label># of days in Trail Completed</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>