force-app/main/default/objects/Opportunity/fields/of_Months__c.field-meta.xml
<CustomField>
    <fullName>of_Months__c</fullName>
    <defaultValue>12</defaultValue>
    <inlineHelpText>Is this an annual subscription? If not, please enter the number of months</inlineHelpText>
    <label># of Months</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>