force-app/main/default/objects/Opportunity/fields/of_Months_for_Subs_Activation__c.field-meta.xml
<CustomField>
    <fullName>of_Months_for_Subs_Activation__c</fullName>
    <label># of Months for Subs Activation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>