force-app/main/default/objects/Opportunity/fields/On_Prem_Subscription_Id__c.field-meta.xml
<CustomField>
    <fullName>On_Prem_Subscription_Id__c</fullName>
    <label>On Prem Subscription Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>