force-app/main/default/objects/Opportunity/fields/Opp_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Opp_Line_Items__c</fullName>
    <label>Opp Line Items</label>
    <length>255</length>
    <type>Text</type>
</CustomField>