force-app/main/default/objects/Opportunity/fields/OppId__c.field-meta.xml
<CustomField>
    <fullName>OppId__c</fullName>
    <displayFormat>{00}</displayFormat>
    <label>OppId</label>
    <type>AutoNumber</type>
</CustomField>