force-app/main/default/objects/Opportunity/fields/Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Amount__c</fullName>
    <description>(Sale Price * Quantity * # of Months)</description>
    <inlineHelpText>Total Contract Value.</inlineHelpText>
    <label>Opportunity Amount</label>
    <summarizedField>OpportunityLineItem.Total_Price__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>