force-app/main/default/objects/Opportunity/fields/Opportunity_Amount_ARMule__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Amount_ARMule__c</fullName>
    <label>Opportunity Amount (Mule)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>