force-app/main/default/objects/Opportunity/fields/Opportunity_Amount_On_Premise__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Amount_On_Premise__c</fullName>
    <label>Opportunity Amount (On Prem)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>