force-app/main/default/objects/Opportunity/fields/Opportunity_Amount_Service__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Amount_Service__c</fullName>
    <label>Opportunity Amount Service</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>