force-app/main/default/objects/Opportunity/fields/Opportunity_Owner_Status__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Status__c</fullName>
    <formula>Owner.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner Status</label>
    <type>Checkbox</type>
</CustomField>