force-app/main/default/objects/Opportunity/fields/Opportunity_state__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_state__c</fullName>
    <formula>IF( ISPICKVAL( StageName ,&apos;Closed Won-Implementation Incomplete&apos;) ,&quot;Onboarding&quot;,
IF(ISPICKVAL( StageName ,&apos;Closed Won - Implementation Completed&apos;) &amp;&amp; ADDMONTHS(Today(),3)== Contract_End_Date__c,&quot;Stable &quot;,
IF(Contract_End_Date__c==Today(),&quot;Renewal&quot;,
IF(Number_of_Product_Subscriptions__c&lt;&gt;0.00 &amp;&amp; Account.Previous_Max_Subs__c &lt;= Number_of_Product_Subscriptions__c ,&quot;Upsell&quot;,
IF(Number_of_Product_Subscriptions__c&lt;&gt;0.00 &amp;&amp; Account.Previous_Max_Subs__c &gt; Number_of_Product_Subscriptions__c  , &quot;Down sell&quot;,&apos;&apos;
)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity_state</label>
    <type>Text</type>
</CustomField>