force-app/main/default/objects/Opportunity/fields/Opportunity_Type_New_Renewal_Upsell__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type_New_Renewal_Upsell__c</fullName>
    <inlineHelpText>Its mandatory to update the type of Opportunity</inlineHelpText>
    <label>Oppty Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Logo</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Upsell</fullName>
            </value>
            <value>
                <fullName>Downsell</fullName>
            </value>
            <value>
                <fullName>POC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>