force-app/main/default/objects/Opportunity/fields/OpportunityAmount_AR__c.field-meta.xml
<CustomField>
    <fullName>OpportunityAmount_AR__c</fullName>
    <label>Opportunity Amount (AR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>