force-app/main/default/objects/Opportunity/fields/OpportunityID__c.field-meta.xml
<CustomField>
    <fullName>OpportunityID__c</fullName>
    <formula>&apos;AR&apos;+if(LEN(Text(Month(DateValue(CreatedDate)) ))==1,&apos;0&apos;+Text(Month(DateValue(CreatedDate)) ),Text(Month(DateValue(CreatedDate)) ))+RIGHT(Text(Year( DateValue( CreatedDate ) )),2)+OppId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OpportunityID</label>
    <type>Text</type>
</CustomField>