force-app/main/default/objects/Opportunity/fields/Oppt_Amout_New_Logs_upsell__c.field-meta.xml
<CustomField>
    <fullName>Oppt_Amout_New_Logs_upsell__c</fullName>
    <label>Opportunity Amount New Logs + upsell</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>