force-app/main/default/objects/Opportunity/fields/Oppt_Amout_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Oppt_Amout_Renewal__c</fullName>
    <label>Opportunity Amout Renewal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>