force-app/main/default/objects/Opportunity/fields/Oppty_Amt_Services__c.field-meta.xml
<CustomField>
    <fullName>Oppty_Amt_Services__c</fullName>
    <label>Oppty Amt (Services)</label>
    <summarizedField>OpportunityLineItem.Total_Price__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Is_this_PS__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>